[package]
name = "penguin_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penguin-util = { path = "penguin-util" }


wgpu = { version = "0.12", features = ["glsl", "spirv"] } # graphics API wrapper

winit = "0.26" # cross-platform window creation

image = "0.23" # image loading

log = "0.4" # lightweight logger
env_logger = "0.9" # implementation of log configured via environment variables

pollster = "0.2" # thread blocking without spinning
bytemuck = { version = "1.8", features = ["derive"] } # simplifies reading data as bytes / POD

anyhow = "1.0" # error handling

macaw = { version = "0.16", features = ["with_bytemuck"] } # math

tobj = "3.2" # obj file loader

hashbrown = "0.12" # HashMap implementation that is faster than std::HashMap
wyhash = "0.5" # fast hashing algorithm

rand = "0.8" # random number generator

bitflags = "1.3" # bitflags

[build-dependencies]
anyhow = "1.0" # error handling
fs_extra = "1.2" # extends std::fs and std::io
glob = "0.3" # unix-style file pattern matching, such as /*
