[package]
name = "penguin_engine"
version = "0.1.0"
edition = "2021"
authors = ["Henrik Nilsson <github.com/Henrik-N>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# util -----------
penguin-util = { path = "penguin-util" } # nested utility crate
#
bytemuck = { version = "1.8", features = ["derive"] } # read POD structs as bytes without extra allocations
macaw = { version = "0.16", features = ["with_bytemuck"] } # math

# rendering -------
wgpu = "0.12"  # graphics API wrapper
winit = "0.26" # cross-platform window creation

# assets ----------
image = "0.23" # image loading
tobj = "3.2" # obj file loader

# logging --------
log = "0.4" # lightweight logger
env_logger = "0.9" # implementation of log configured via environment variables

# errors ---------
anyhow = "1.0" # error handling

# ui -------------
egui = "0.16"
egui_winit_platform = "0.13"
egui_wgpu_backend = "0.16"


downcast-rs = "1.2.0"
atomic_refcell = "0.1.8"
arrayvec = "0.7.2"

# ecs -----------
legion = "0.4.0"
# hecs = "0.7.6"
# hecs-schedule = "0.6.1"


# bevy ---------
bevy_app = "0.7" # scheduler
bevy_log = "0.7" # logger
bevy_ecs = "0.7" # ecs
bevy_winit = { version = "0.7", features = ["x11"] }
bevy_window = "0.7"
bevy_input = "0.7.0"



[build-dependencies]
anyhow = "1.0" # error handling
fs_extra = "1.2" # extends std::fs and std::io
glob = "0.3" # unix-style file pattern matching, such as /*
