[package]
name = "penguin-util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.12"

bytemuck = { version = "1.8", features = ["derive"] }

bitflags = "1.3" # bitflags macro

pollster = "0.2" # thread blocking without spinning

# hashbrown = "0.12" # HashMap<K, V> implementation that is faster than std::HashMap
# wyhash = "0.5" # fast hashing algorithm
